--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   
   <!-- Site Hero Start -->
-  <section class="site-hero" style="background-image: url('images/backgrounds/hero-background.jpg');">
+  <section class="site-hero" style="background-image: url('https://tva1.sinaimg.cn/large/e6c9d24egy1go4dlidkydj21400u0npe.jpg');">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 mx-auto">
