--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <h1>Hi, my name is Forty</h1>
+                <h1>你好，我是Klaus</h1>
             </header>
             <div class="content">
                 <p>A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP
