--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 			<!-- Header -->
     <header id="header" class="alt">
-        <a href="https://klauslayard.com" class="logo"><strong>冻布</strong> <span>With Github</span></a>
+        <a href="https://klauslayard.com" class="logo"><strong></strong> <span>With Github</span></a>
         <nav>
             <a href="#menu">导航</a>
         </nav>
@@ -74,7 +74,7 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <h1>你好，我是Klaus</h1>
+                <h1>你好，我是冻布</h1>
             </header>
             <div class="content">
                 <p>记录平凡生活的点点滴滴</p>
