--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         
         <article>
             <span class="image">
-                <img src="img/pic02.jpg" alt="" />
+                <img src="https://tva1.sinaimg.cn/large/e6c9d24egy1go4j9935a9j214w0u079n.jpg" alt="" />
             </span>
             <header class="major">
                 <h3><a href="https://klauslayard.com/blogs/delicacy" class="link">美食记录</a></h3>
@@ -117,14 +117,14 @@
                 <img src="img/pic03.jpg" alt="" />
             </span>
             <header class="major">
-                <h3><a href="https://klauslayard.com/blogs/intercourse" class="link">友情岁月</a></h3>
+                <h3><a href="https://tva1.sinaimg.cn/large/e6c9d24egy1go4jad0fhdj20sg0lc79f.jpg" class="link">友情岁月</a></h3>
                 <p>一面之缘亦不可惜</p>
             </header>
         </article>
         
         <article>
             <span class="image">
-                <img src="img/pic04.jpg" alt="" />
+                <img src="https://tva1.sinaimg.cn/large/e6c9d24egy1go4jc9j1zaj20sg0lc42k.jpg" alt="" />
             </span>
             <header class="major">
                 <h3><a href="https://klauslayard.com/blogs/proficiency" class="link">一技之长</a></h3>
