--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
         
         <article>
             <span class="image">
-                <img src="img/pic03.jpg" alt="" />
+                <img src="https://tva1.sinaimg.cn/large/e6c9d24egy1go4jad0fhdj20sg0lc79f.jpg" alt="" />
             </span>
             <header class="major">
-                <h3><a href="https://tva1.sinaimg.cn/large/e6c9d24egy1go4jad0fhdj20sg0lc79f.jpg" class="link">友情岁月</a></h3>
+                <h3><a href="https://klauslayard.com/blogs/intercourse" class="link">友情岁月</a></h3>
                 <p>一面之缘亦不可惜</p>
             </header>
         </article>
