--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
 
 			<!-- Header -->
     <header id="header" class="alt">
-        <a href="https://klauslayard.com" class="logo"><strong>Forty</strong> <span>By HTML5 Up</span></a>
+        <a href="https://klauslayard.com" class="logo"><strong>泥蒿</strong> <span>与香椿</span></a>
         <nav>
             <a href="#menu">Menu</a>
         </nav>
