--- a/404.html
+++ b/404.html
@@ -74,8 +74,8 @@
 		<!-- Main -->
 			<div id="main">
 				<div class="inner">
-					<h1>页面丢失叻</h1>
-					<p>回到首页吧</a></p>
+					<h1>页面丢失咯</h1>
+					<a href="https://klauslayard.com">回到首页吧</a>
 				</div>
 			</div>
 
