--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 
                     <li><a href="https://www.linkedin.com" class="icon alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 
-                    <li><a href="/Write it down.html" class="icon alt fa-anycubic" target="_blank"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="/Write it down.html" class="fa fa-thumbs-o-up" target="_blank"><span class="label">LinkedIn</span></a></li>
                 
             </ul>
             <ul class="copyright">
