--- a/Write it down.html
+++ b/Write it down.html
@@ -18,7 +18,7 @@
             <hr />
             <img src="https://tva1.sinaimg.cn/large/e6c9d24egy1go7o9tnm5kj20u00u0x6q.jpg"
              alt="夕阳下的公司顶层" title="夕阳下的公司顶层剪影" width=300px border=1 />
-            <a href="cn.anycubic.com" target="_blank">纵维立方官网</a>
+            <a href="https://cn.anycubic.com" target="_blank">纵维立方官网</a>
 
                       
             
