--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>泥蒿与香椿 个人博客 日记 生活</title>
 	<!-- Stylesheets -->
 	
-	<link rel="stylesheet" href="https://klauslayard.com/css/main.css"/>
+	<link rel="stylesheet" href="/css/main.css"/>
 	
 	
 
